projects/hslayers/components/sidebar/sidebar.component.scss
.hs-sidebar-item {
    color: $primary;
    background-color: white;
    cursor: pointer;
    min-height: 48px;
}

.hs-sidebar-item [class*=" fa-"] {
    margin-left: -4px;
}

hs-sidebar {
    bottom: 0;
    position: absolute;
    top: 0;
    background: hs-styler-content-list;
    transition: width 100ms ease-out;
    z-index: 2;
}

// hs-sidebar div.hs-sidebar-list a:not(.active){
//     background-color: transparent ;
//     color: var(--sidebar-item-color);
// }

.hs-content-wrapper.hs-open .hs-panelspace:not(.labels) hs-sidebar {
    border-right: 1px solid hsl(0, 0%, 87%);
}

.hs-panelspace.labels hs-sidebar {
    width: 400px;
}

.hs-panelspace:not(.buttons) hs-sidebar {
    display: none;
}

.hs-content-wrapper.hs-sb-left:not(.hs-open) hs-sidebar {
    background-color: white;
    right: auto;
    width: 48px;
}

.hs-content-wrapper.hs-sb-right:not(.hs-open) hs-sidebar {
    background-color: white;
    left: auto;
    width: 48px;
}

.hs-content-wrapper:not(.hs-open) .hs-panelspace {
    width: 48px;
    border-right: 1px solid hsl(0, 0%, 87%);
}

.hs-content-wrapper.hs-open .hs-sidebar-list {
    width: 100%;
}

.hs-content-wrapper.hs-open div.hs-panelspace:not(.labels) hs-sidebar .hs-sidebar-list {
    width: 48px;
}

div.hs-panelplace {
    height: 100%;
    overflow-y: auto;
    margin-left: 49px;
}

div.hs-panelplace>div {
    height: 100%;
}

div.hs-panelspace:not(.buttons) hs-sidebar~div.hs-panelplace {
    margin-left: 0;
    width: 400px;
}


.hs-sidebar-list {
    margin-top: 0.25rem;

    .list-group-item {
        border-left: 0px;
        border-right: 0px;
        white-space: nowrap;
    }
}

.hs-sidebar-list .list-group-item:first-child {
    border-top-left-radius: 0;
    border-top-right-radius: 0;
}

.hs-sidebar-list .list-group-item:last-child {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
}

.hs-sidebar-item:not(.language) .hs-sidebar-item-title {
    margin-left: 20px;
}

.hs-sidebar-item.language .hs-sidebar-item-content {
    transform: translateX(-5px);
}

.hs-sidebar-item-title {
    margin-left: 14px;
}

.hs-panelspace:not(.labels) .hs-sidebar-list span.hs-sidebar-item-title {
    display: none;
}

.hs-content-wrapper.hs-sb-right:not(.hs-open) .hs-sidebar-list {
    right: 0;
}

.hs-content-wrapper.hs-sb-left:not(.hs-open) .hs-sidebar-list {
    left: 0;
}

.hs-content-wrapper:not(.hs-open) .hs-sidebar-item-title {
    display: none;
}

.hs-content-wrapper:not(.hs-open) .hs-panelplace {
    display: none;
}

hs-sidebar hs-panel-header.sidebar-header {
    display: none;
}

hs-sidebar .hs-sidebar-item.hs-panel-hidden {
    display: none !important;
}

hs-mini-sidebar .hs-sidebar-item:not(.hs-panel-hidden) {
    display: none !important;
}

hs-mini-sidebar .hs-sidebar-list {
    height: auto;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    margin: auto;
}

hs-mini-sidebar .hs-sidebar-item.hs-panel-hidden {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    width: 100%;
}

hs-mini-sidebar .hs-sidebar-item-title {
    display: block !important;
    margin: 0 !important;
    font-size: 0.65rem;
}

hs-sidebar~div.hs-panelplace {
    overflow-x: hidden;
}

&.hs-mobile-view {

    .hs-content-wrapper .hs-sidebar-item-title:not(.hs-mini-sidebar) {
        display: none;
    }

    .hs-panelspace:not(.labels) .hs-sidebar-list span.hs-sidebar-item-title {
        font-size: 1rem;
    }

    hs-sidebar {
        display: flex;
    }

    hs-sidebar {
        position: unset;
        width: 100% !important;
    }

    hs-sidebar~div.hs-panelplace {
        margin: auto;
        min-height: 35vh;
        padding-top: 0.5em;
        scrollbar-width: none;
        width: 95%;
    }

    hs-sidebar>div.list-group {
        flex-direction: row !important;
        justify-content: space-evenly;
    }

    .hs-sidebar-list {
        margin-top: 0;

        .list-group-item {
            white-space: normal;
        }
    }

    .hs-content-wrapper.hs-open div.hs-panelspace:not(.labels) hs-sidebar .hs-sidebar-list {
        width: 100%;
    }

    div.hs-content-wrapper:not(.hs-open) div.hs-panelspace-wrapper {
        width: 100%;
        height: auto;
    }

    .hs-content-wrapper div.hs-panelspace:not(.labels) hs-sidebar .hs-sidebar-list {
        width: 100%;
    }

    .hs-content-wrapper div.hs-panelspace .hs-mini-sidebar .hs-sidebar-list {
        width: 100%;
    }

    a.hs-sidebar-item.list-group-item {
        flex-grow: 1;
        display: flex;
        justify-content: center;
        padding: 0.55rem 1.05rem;
    }

    .hs-sidebar-item {
        justify-content: center;
        align-self: center;
        border: 0 !important;
        min-height: 3rem;
    }

    hs-mini-sidebar .hs-sidebar-list {
        flex-direction: row !important;
        justify-content: center;
        align-items: center;
        flex-wrap: wrap;
        margin: auto;
        gap: 0.75rem;
        padding-top: 0.5rem;
        min-height: 50%;
    }

    hs-mini-sidebar hs-panel-header.sidebar-header {
        display: none;
    }

    hs-mini-sidebar .hs-sidebar-item.hs-panel-hidden {
        width: 30%;
        font-size: 2rem;
    }

    hs-mini-sidebar .list-group-item {
        border: none;
        background-color: unset;
    }

    hs-sidebar .hs-panel-hidden {
        display: none !important;
    }

    hs-mini-sidebar .hs-sidebar-item:not(.hs-panel-hidden) {
        display: none !important;
    }

    .hs-content-wrapper:not(.hs-open) .hs-panelspace {
        width: 100%
    }
}

